--- a/src/styles.css
+++ b/src/styles.css
@@ -33,14 +33,13 @@ div div {
   border: 2px solid #b18597;
   border-radius: 0.75em;
   transform-style: preserve-3d;
-  transition:
-    transform 150ms cubic-bezier(0, 0, 0.58, 1),
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     background 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 
 .video-game-button::before {
   position: absolute;
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   top: 0;
@@ -49,12 +48,9 @@ div div {
   bottom: 0;
   background: #ffe0f0;
   border-radius: inherit;
-  box-shadow:
-    0 0 0 2px #b18597,
-    0 0.625em 0 0 #ffe3e2;
+  box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
   transform: translate3d(0, 0.75em, -1em);
-  transition:
-    transform 150ms cubic-bezier(0, 0, 0.58, 1),
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
     box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 
@@ -63,9 +59,7 @@ div div {
 }
 
 .video-game-button::before {
-  box-shadow:
-    0 0 0 2px #b18597,
-    0 0.5em 0 0 #333333;
+  box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #333333;
   transform: translate3d(0, 0.5em, -1em);
 }
 
@@ -75,9 +69,7 @@ div div {
 }
 
 .video-game-button:active::before {
-  box-shadow:
-    0 0 0 2px #b18597,
-    0 0 #ffe3e2;
+  box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
   transform: translate3d(0, 0, -1em);
 }
 
